Fix theme button alignment

--- a/www/_includes/default.scss
+++ b/www/_includes/default.scss
@@ -23,7 +23,6 @@ html[data-bs-theme="dark"] {
   .dropdown-toggle {
     color: currentColor;
     border: 0px;
-    padding-top: 0px;
     svg {
       width: 19px;
       height: 19px;
